# temper-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =1.24.0  ARCHITECTURE_ISSUES_BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CQ_TASKS_STATUS_REPORT.md  DATABASE_FAILURE_TEST_DESIGN.md  DATABASE_FAILURE_TEST_STATUS.md  DB_TEST_PATTERNS_QUICK_REF.md  DISTRIBUTED_OBSERVABILITY_TEST_STRATEGY.md  DISTRIBUTED_RATE_LIMITING_DIAGRAMS.md  DISTRIBUTED_RATE_LIMITING_QUICK_REFERENCE.md  DISTRIBUTED_RATE_LIMITING_SECURITY_ANALYSIS.md  DISTRIBUTED_RATE_LIMITING_SUMMARY.md  DISTRIBUTED_RATE_LIMITING_TEST_DESIGN.md  DISTRIBUTED_TRACKING_QUICK_REFERENCE.md  Dockerfile  FINAL-REVIEW-SKILLS-SUMMARY.md  LICENSE  M3_TASK_REVIEW.md  Makefile  NOTICE  PARALLEL_EXECUTOR_TEST_STRATEGY.md  PIPELINE-IMPLEMENTATION-SUMMARY.md  PIPELINE-IMPROVEMENTS.md  PIPELINE-TODO.md  RATE_LIMIT_BYPASS_ATTACK_DIAGRAM.md  RATE_LIMIT_FIX_IMPLEMENTATION.md  RATE_LIMIT_SECURITY_SUMMARY.md  RATE_LIMIT_SECURITY_TEST_PLAN.md  README.md  REDOS_FIX_ANALYSIS.md  REDOS_FIX_DIAGRAM.md  REDOS_FIX_SUMMARY.md  REVIEW-SKILLS-UPDATES.md  (+59 more)
.benchmarks/: CHANGELOG.md  README.md
.claude-coord/: .atomic_write_wrapper.sh  .gitignore  .snapshot-state.sh  .watch-state.sh  AGENT_CLEANUP_FIX.md  BACKFILL_EDGE_CASES_PLAN.md  BACKFILL_TEST_STRATEGY_PLAN.md  BUG_FIX_DATABASE_CORRUPTION.md  BUG_REPORT.md  CODE_QUALITY_TASKS.md  COMPREHENSIVE_TEST_SUITE.md  CONCURRENCY_ANALYSIS_REPORT.md  CONCURRENCY_TESTING_SUMMARY.md  COORDINATION_DAEMON_SUMMARY.md  COORD_SERVICE_TEST_AUDIT.md  DAEMON_DESIGN.md  DAEMON_FOR_SKILLS.md  DAEMON_INDEX.md  DAEMON_QUICK_REFERENCE.md  DAEMON_QUICK_START.md  DAEMON_STARTUP.md  DAEMON_USAGE.md  DANGEROUS_SANDBOX_FLAG.md  DEPENDENCY_GUIDE.md  DEPENDENCY_SYSTEM_SUMMARY.md  DOC_TASKS_STATUS.md  DOC_TASKS_SUMMARY.md  FIXES_APPLIED.md  GLOBAL_COORD_ALIAS.md  IMPLEMENTATION_CHECKLIST.md  INCIDENT_ANALYSIS.md  M3_EXPANSION_SUMMARY.md  M3_TASK_SUMMARY.md  M4_TASK_SUMMARY.md  M5_SETUP_STATUS.md  M5_TASKS_CREATED.md  M5_TASK_BREAKDOWN.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MILESTONE_FIRST_ORDER.md  (+55 more)
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
changes/: 0001-docs-crit-import-01-strategy-names.md  0001-improve-test-assertions.md  0001-m1-04-config-schemas-verified.md  0001-metric-collector-interface.md  0001-verify-missing-deps-false-positive.md  0002-docs-crit-import-02-toolregistry-methods.md  0002-input-validation-policies.md  0002-m3.2-02-node-builder-verified.md  0002-path-traversal-fix.md  0002-replace-md5-with-sha256.md  0003-async-race-condition-fix-plan.md  0003-async-race-fix.md  0003-code-crit-01-sql-injection-fix.md  0003-code-crit-02-redos-fix.md  0003-docs-crit-import-03-safetyviolation.md  0003-docs-crit-link-01-broken-links-fixed.md  0003-gap-m3-01-track-collab-event.md  0003-redos-regex-fix.md  0004-code-crit-03-04-path-traversal-fixes.md  0004-docs-crit-import-04-servicefactory.md  0004-docs-crit-missing-02-execution-engine-docs.md  0004-docs-low-examples-01.md  0004-gap-m3-03-quality-gates-retry.md  0004-redis-password-security.md  0005-code-crit-05-insecure-cache-keys.md  0005-docs-crit-import-05-policycomposer.md  0005-docs-crit-missing-03-checkpoint-docs.md  0005-gap-m4-01-fix-exp-obs-test.md  0005-redis-flushdb-safety.md  0006-code-crit-07-command-injection-fix.md  0006-docs-crit-missing-01-license.md  0006-docs-crit-sig-01-agentresponse-fields.md  0006-json-import-validation.md  0006-test-crit-distributed-observability-07.md  0006-test-crit-e2e-integration-05.md  0007-code-crit-08-sql-injection-already-fixed.md  0007-docs-crit-path-01-file-paths.md  0007-docs-high-accuracy-02-architecture-diagram.md  0007-test-crit-database-failures-06.md  0007-test-high-slow-tests-11.md  (+327 more)
config/: model_pricing.yaml
configs/: README.md
contracts/: AdvancedNFT.sol
docs/: API_REFERENCE.md  CODEBASE_REVIEW.md  CONFIGURATION.md  CONSOLE_VISUALIZATION_DESIGN.md  CONSOLE_VISUALIZATION_EXAMPLES.md  CONSOLE_VISUALIZATION_INDEX.md  CONSOLE_VISUALIZATION_REFERENCE.md  CONSOLE_VISUALIZATION_SUMMARY.md  CONTRIBUTING.md  GLOSSARY.md  INDEX.md  INTEGRATION.md  M4_API_REFERENCE.md  M4_CONFIGURATION_GUIDE.md  M4_DEPLOYMENT_GUIDE.md  M4_PRODUCTION_READINESS.md  M4_SAFETY_ARCHITECTURE.md  M5_CLI_GUIDE.md  M5_LOOP_IMPLEMENTATION.md  M5_MODULAR_ARCHITECTURE.md  MIGRATION.md  OAUTH_SETUP.md  QUALITY_QUICK_START.md  QUICK_START.md  ROADMAP.md  ROADMAP_TO_10_OUT_OF_10.md  TESTING.md  TEST_IMPLEMENTATION_GUIDE.md  TROUBLESHOOTING.md  TYPE_HINTS_GUIDE.md  VISION.md  collaboration_strategies.md
examples/: README.md  compare_search_providers.py  content_creation_demo_input.yaml  context_test_input.yaml  debate_demo_input.yaml  demo_async_llm.py  demo_input.yaml  demo_utils.py  dialogue_advanced.yaml  dialogue_demo_input.yaml  dialogue_role_based.yaml  dialogue_simple.yaml  dynamic_forward_code_input.yaml  dynamic_forward_demo_input.yaml  dynamic_forward_mixed_input.yaml  dynamic_retry_demo_input.yaml  e2e_yaml_debate.py  export_waterfall.py  gantt_vs_waterfall_explained.py  generate_metrics.py  hello_world_input.yaml  hierarchical_gantt_explained.py  integrated_demo.py  lifecycle_critical_input.yaml  lifecycle_small_input.yaml  m3_comprehensive_demo.py  m3_llm_debate_contentious.py  m3_llm_debate_demo.py  m4_safety_complete_workflow.py  m5_demo.py  m5_demo_metrics.py  m5_demo_real_llm.py  market_research_input.yaml  memory_demo_input.yaml  milestone1_demo.py  milestone2_demo.py  optimized_decision_input.yaml  pipeline_demo_input.yaml  product_dev_demo_input.yaml  query_trace.py  (+33 more)
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: architecture_scan.py  check_quality_score.py  demo_dynamic_stage_calling.py  e2e_studio_test.py  generate_docs.py  generate_tool_docs.py  install-git-hooks.sh  migrate_modules.py  start-vllm.sh
temper_ai/: __init__.py  server.py
tests/: conftest.py  test_architecture_scan.py  test_boundary_values.py  test_documentation_examples.py  test_executor_cleanup.py  test_llm_cache.py  (+7 more)
(+3867 files in other folders)
