[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temper-ai"
version = "0.1.0"
description = "Composable multi-agent workflows — experiment freely, improve visibly, ship safely."
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Temper AI Team" },
]
keywords = ["ai", "agents", "multi-agent", "workflow", "orchestration", "safety", "yaml"]
readme = "README.md"

dependencies = [
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1.6,<4.0",
    "sqlmodel>=0.0.14,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "httpx>=0.25,<1.0",
    "rich>=13.0,<14.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.8",
]
gemini = [
    "google-genai>=1.0",
]
memory = [
    "mem0ai>=1.0.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.2",
    "pytest-randomly>=3.15",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "bandit>=1.7",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
temper = "temper_ai.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
asyncio_mode = "strict"
markers = [
    "slow: marks tests as slow",
]

[tool.ruff]
exclude = [
    "__pycache__",
    "*.pyc",
    "node_modules",
    "old_temper_ai",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B017", "B904", "B023", "B015", "B007"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
